[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Placeholder/brownwizardpalm.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Placeholder/brownwizardarm2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Placeholder/brownwizardarm1.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://UI/Fonts/SourceSansProRegular/SourceSansPro-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = SubResource( 4 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -129, 181 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -129, 181 ), Vector2( 1164, 181 ), Vector2( 1164, 181 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.999
anchor_bottom = 0.998
margin_left = 285.0
margin_right = -284.976
margin_bottom = 0.200012

[node name="Title" type="Label" parent="MarginContainer"]
margin_top = 268.0
margin_right = 453.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 5 )
text = "Muscle Wizard"
align = 1

[node name="MainButtons" type="MarginContainer" parent="."]
anchor_right = 0.999
anchor_bottom = 1.0
margin_left = 382.0
margin_top = 418.0
margin_right = -381.976
margin_bottom = -17.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
margin_right = 259.0
margin_bottom = 165.0

[node name="Play" type="Button" parent="MainButtons/VBoxContainer"]
margin_right = 259.0
margin_bottom = 52.0
size_flags_vertical = 3
text = "Play"

[node name="Credits" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 56.0
margin_right = 259.0
margin_bottom = 108.0
size_flags_vertical = 3
text = "Credits"

[node name="Exit" type="Button" parent="MainButtons/VBoxContainer"]
margin_top = 112.0
margin_right = 259.0
margin_bottom = 165.0
size_flags_vertical = 3
text = "Exit"

[node name="CreditsContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 306.0
margin_top = 385.0
margin_right = 725.0
margin_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsContainer"]
margin_right = 419.0
margin_bottom = 176.0

[node name="CreditsLbl" type="RichTextLabel" parent="CreditsContainer/VBoxContainer"]
margin_right = 419.0
margin_bottom = 86.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2]
[center]Programmer, Design, Narrative - Isaac Cantine
Art, Programming, Design, Narrative? - Omer Ahmed
Additional Support - Boris Fleysher
[/center][/wave]"
text = "
Programmer, Design, Narrative - Isaac Cantine
Art, Programming, Design, Narrative? - Omer Ahmed
Additional Support - Boris Fleysher
"

[node name="Back" type="Button" parent="CreditsContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 419.0
margin_bottom = 176.0
size_flags_vertical = 3
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/RESET = SubResource( 1 )
anims/default = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -129, 181 )
frames = SubResource( 3 )
playing = true

[connection signal="pressed" from="MainButtons/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CreditsContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
